EPBDS-8713 Remove reflective instantioation for well know PropertiesFileNameProcessor
--HG--
branch : 5.23.x